crates/narrative/tests/compile-fail/missing-step-text.stderr
error: expected a step, trait, struct, enum, or let
 --> tests/compile-fail/missing-step-text.rs:4:5
  |
4 |     fn invalid_step(&self);
  |     ^^
